--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -14,7 +14,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:background="#ffffff">
+            android:background="#ffffff"
+            android:id="@+id/relativeLayout7">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -42,7 +43,7 @@
             android:id="@+id/booklist"
             android:dividerHeight="10dp"
             android:divider="#ebecf0"
-            android:layout_marginTop="65dp" />
+            android:layout_marginTop="65dp"/>
     </RelativeLayout>
 
     <Button
