--- a/app/src/main/res/layout/info_item2.xml
+++ b/app/src/main/res/layout/info_item2.xml
@@ -2,6 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="#fff">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView2"
+        android:background="#5555">
+    </ListView>
 
 </LinearLayout>
