--- a/app/src/main/res/layout/info_item4.xml
+++ b/app/src/main/res/layout/info_item4.xml
@@ -2,6 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
-
+    android:background="#fff">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView4"
+        android:background="#5555">
+    </ListView>
 </LinearLayout>
