版本自动更新完成
1、完成了版本的自动更新
2、图片选择工具只弄了一半
3、不准备使用tablayout来操作借入借出了（删除了多余的东西）

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,13 +21,9 @@
             android:icon="@mipmap/my_favourite"
             android:id="@+id/refrush"
             android:title="版本更新" />
+        <item
+            android:icon="@mipmap/my_favourite"
+            android:id="@+id/quit"
+            android:title="退出登录" />
     </group>
-
-    <item android:title="">
-        <menu>
-            <item
-                android:id="@+id/quit"
-                android:title="退出登录" />
-        </menu>
-    </item>
 </menu>
