--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -63,16 +63,29 @@
             android:layout_marginRight="30dp"
             android:layout_marginBottom="110dp"
             android:visibility="gone" />
+
         <ImageButton
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:id="@+id/shortcut"
-            android:layout_marginBottom="50dp"
-            android:layout_marginRight="30dp"
-            android:src="@drawable/shortcut"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:id="@+id/RedPoint"
+            android:layout_marginBottom="96dp"
+            android:layout_marginRight="29dp"
+            android:src="@drawable/red_point"
             android:scaleType="fitXY"
             android:background="#00000000"
-            android:layout_gravity="right|bottom" />
+            android:layout_gravity="right|bottom"
+            android:visibility="gone"/>
+
+        <ImageButton
+            android:id="@+id/shortcut"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginBottom="50dp"
+            android:layout_marginRight="30dp"
+            android:background="#00000000"
+            android:scaleType="fitXY"
+            android:src="@drawable/shortcut" />
     </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
