拒绝借出马上就要完成了，出现问题：书主拒绝后不能修改用户的借书状态（用户只能修改自己的用户信息）

--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="cn.a1949science.www.bookshare.ui.User_Info"
     android:background="#ebecf0">
@@ -48,12 +49,12 @@
             android:layout_weight="1"
             android:gravity="left|center_vertical" />
 
-        <ImageView
+        <cn.a1949science.www.bookshare.widget.CircleImageView
+            android:id="@+id/favicon"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/favicon"
-            android:gravity="center_horizontal"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:src="@drawable/favicon" />
 
         <ImageView
             android:layout_width="35dp"
