--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,9 +14,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginLeft="40dp"
-        android:src="@drawable/favicon"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FF222222"/>
+        android:src="@drawable/favicon" />
 
     <TextView
         android:layout_width="wrap_content"
