--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -40,12 +40,12 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="头像"
             android:id="@+id/textView"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_weight="1"
             android:gravity="left|center_vertical" />
 
@@ -60,10 +60,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:id="@+id/imageView10"
-            android:src="@drawable/after"
-            android:layout_alignBottom="@+id/imageView9"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:src="@drawable/after" />
     </LinearLayout>
 
     <LinearLayout
@@ -84,7 +81,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="昵称"
             android:id="@+id/textView2"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_weight="1"
             android:gravity="left|center_vertical" />
 
@@ -93,7 +90,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/nickname"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:layout_weight="1"
             android:gravity="center_vertical|right" />
 
@@ -116,12 +113,12 @@
         android:paddingRight="10dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="详细信息"
             android:id="@+id/textView4"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_weight="1"
             android:gravity="left|center_vertical" />
 
@@ -143,12 +140,12 @@
         android:paddingRight="10dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="修改密码"
             android:id="@+id/textView5"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_weight="1"
             android:gravity="left|center_vertical" />
 
