--- a/app/src/main/res/layout/activity_app_start.xml
+++ b/app/src/main/res/layout/activity_app_start.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_app_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.ui.AppStart">
+    tools:context="cn.a1949science.www.bookshare.activity.AppStart">
 
     <ImageView
         android:layout_width="match_parent"
