--- a/app/src/main/res/layout/activity_my__book__list.xml
+++ b/app/src/main/res/layout/activity_my__book__list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.ui.My_Book_List"
+    tools:context="cn.a1949science.www.bookshare.activity.My_Book_List"
     android:background="#ebecf0">
 
     <RelativeLayout
