--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="cn.a1949science.www.bookshare.ui.User_Info"
+    tools:context="cn.a1949science.www.bookshare.activity.User_Info"
     android:background="#ebecf0">
 
     <RelativeLayout
