--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.ui.MenuActivity">
+    tools:context="cn.a1949science.www.bookshare.activity.MenuActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
