修改大部分的界面

--- a/app/src/main/res/layout/activity_advice__page.xml
+++ b/app/src/main/res/layout/activity_advice__page.xml
@@ -1,49 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="cn.a1949science.www.bookshare.activity.Advice_Page">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#ffffff"
-        android:id="@+id/relativeLayout">
+    <include layout="@layout/bar_main" />
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/before"
-            android:src="@drawable/before"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/content"
-        android:hint="@string/adviceHint"
-        android:gravity="center_vertical|center_horizontal"
-        android:background="#ffffff"
-        android:layout_marginTop="12dp"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColorLink="@android:color/background_dark" />
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/content"
+            android:hint="@string/adviceHint"
+            android:gravity="center_vertical|center_horizontal"
+            android:background="#ffffff"
+            android:textColorLink="@android:color/background_dark" />
+    </LinearLayout>
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="@string/okBtn"
-        android:id="@+id/advBtn"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
-        android:textColor="#ffffff"
-        android:background="#fd9302" />
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/okBtn"
+            android:id="@+id/advBtn"
+            android:textColor="#ffffff"
+            android:background="#fd9302" />
+    </LinearLayout>
+</LinearLayout>
