--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -8,25 +8,16 @@
     android:gravity="center_horizontal"
     android:background="#ebecf0"
     tools:context="cn.a1949science.www.bookshare.activity.EditPassword">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#ffffff"
-        android:id="@+id/relativeLayout3">
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/before"
-            android:src="@drawable/before"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
+    <include layout="@layout/bar_main" />
+
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:background="#fff"
+        android:gravity="center_horizontal">
 
         <EditText
             android:layout_width="300dp"
@@ -35,14 +26,7 @@
             android:id="@+id/oldPassword"
             android:hint="请输入旧密码"
             android:selectAllOnFocus="true"
-            android:layout_weight="1"
             android:inputType="textPassword" />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
-
         <EditText
             android:layout_width="300dp"
             android:layout_height="55dp"
@@ -51,13 +35,6 @@
             android:hint="请设置新密码"
             android:selectAllOnFocus="true"
             android:inputType="textPassword" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
-
         <EditText
             android:layout_width="300dp"
             android:layout_height="55dp"
@@ -66,12 +43,14 @@
             android:hint="请再次设置新密码"
             android:selectAllOnFocus="true"
             android:inputType="textPassword" />
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:background="#fd9302"
+            android:text="确认修改"
+            android:id="@+id/EditOk"
+            android:textSize="20sp" />
     </LinearLayout>
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="300dp"
-        android:layout_height="55dp"
-        android:text="确认修改"
-        android:id="@+id/EditOk"
-        android:textSize="20sp" />
+
 </LinearLayout>
