忘记密码这一个功能已经加上了

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,100 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="cn.a1949science.www.bookshare.activity.RegisterPage"
     android:gravity="center"
-    android:background="@mipmap/login">
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp">
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:ems="10"
-            android:id="@+id/name"
-            android:hint="请输入姓名"
-            android:selectAllOnFocus="true"
-            android:layout_weight="1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:ems="10"
-            android:id="@+id/gender"
-            android:hint="请选择性别"
-            android:selectAllOnFocus="true"
-            android:layout_weight="1"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:ems="10"
-            android:id="@+id/school"
-            android:hint="请选择学校"
-            android:selectAllOnFocus="true"
-            android:layout_weight="1"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:clickable="false" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
-
-        <EditText
-            android:id="@+id/dorm"
-            android:layout_width="300dp"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:clickable="false"
-            android:ems="10"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:hint="请选择宿舍号"
-            android:selectAllOnFocus="true" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="55dp" >
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:ems="10"
-            android:id="@+id/Class"
-            android:hint="请选择年级"
-            android:selectAllOnFocus="true"
-            android:layout_weight="1"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false" />
-    </LinearLayout>
-
+    android:background="@mipmap/login"
+    tools:context="cn.a1949science.www.bookshare.activity.ForgetPassword">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="300dp"
@@ -114,7 +27,7 @@
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/phoneNum"
-            android:hint="请输入手机号"
+            android:hint="请输入注册手机号"
             android:paddingLeft="16dp"
             android:maxLength="11"
             android:selectAllOnFocus="true"
@@ -161,7 +74,7 @@
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/password"
-            android:hint="请设置密码"
+            android:hint="请设置新密码"
             android:selectAllOnFocus="true"
             android:layout_weight="1"
             android:inputType="textPassword" />
@@ -177,7 +90,7 @@
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/password2"
-            android:hint="请再次设置密码"
+            android:hint="请再次设置新密码"
             android:selectAllOnFocus="true"
             android:layout_weight="1"
             android:inputType="textPassword" />
@@ -187,9 +100,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:text="确认注册"
-        android:id="@+id/registerOk"
+        android:text="确认"
+        android:id="@+id/editOk"
         android:textSize="20sp" />
-
 </LinearLayout>
-
