--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cn.a1949science.www.bookshare.activity.Login_Page"
-    android:gravity="center_horizontal"
+    android:gravity="center"
+    android:orientation="vertical"
     android:background="@mipmap/login">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout13"
-        android:layout_alignLeft="@+id/linearLayout13"
-        android:layout_alignStart="@+id/linearLayout13">
+        android:layout_height="wrap_content">
 
         <EditText
             android:layout_width="0dp"
@@ -34,11 +32,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        android:layout_above="@+id/login"
-        android:layout_alignLeft="@+id/login"
-        android:layout_alignStart="@+id/login"
-        android:id="@+id/linearLayout13"
-        android:layout_marginBottom="50dp">
+        android:id="@+id/linearLayout13">
 
         <EditText
             android:layout_width="0dp"
@@ -52,6 +46,28 @@
             android:inputType="textPassword" />
 
     </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/linearLayout14">
+        <TextView
+            android:text="忘记密码"
+            android:textColor="#000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="60dp"
+            android:id="@+id/forgetPass"
+            android:layout_marginBottom="15dp" />
+        <CheckBox
+            android:text="记住密码"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:id="@+id/pass_input"
+            android:layout_marginBottom="15dp" />
+    </LinearLayout>
 
     <Button
         android:layout_width="300dp"
@@ -59,8 +75,6 @@
         android:text="@string/login"
         android:id="@+id/login"
         android:textSize="20sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:background="@drawable/rs_select_btn_blue"
         android:textColor="#FFFFFF"/>
 
@@ -71,20 +85,7 @@
         android:text="@string/register"
         android:id="@+id/register"
         android:textSize="20sp"
-        android:layout_below="@+id/login"
-        android:layout_alignLeft="@+id/login"
-        android:layout_alignStart="@+id/login"
         android:background="@drawable/rs_select_btn_blue"
         android:textColor="#FFFFFF"/>
 
-    <CheckBox
-        android:text="记住密码"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pass_input"
-        android:layout_marginBottom="15dp"
-        android:layout_above="@+id/login"
-        android:layout_alignRight="@+id/linearLayout13"
-        android:layout_alignEnd="@+id/linearLayout13" />
-
-</RelativeLayout>
+</LinearLayout>
